# dfdx

./: .gitignore
dfdx-core/: Cargo.toml
dfdx-core/src/shapes/: slice.rs
dfdx-core/src/tensor_ops/utilities/: compatibility.cuh
