[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "dfdx-core"
rust-version = "1.65"
version = "0.13.0"

description = "Ergonomic auto differentiation in Rust, with pytorch like apis."
documentation = "https://docs.rs/dfdx"
homepage = "https://github.com/coreylowman/dfdx"
readme = "README.md"
repository = "https://github.com/coreylowman/dfdx"

keywords = [
  "deep-learning",
  "neural-network",
  "backprop",
  "tensor",
  "autodiff",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["nightly", "numpy", "safetensors", "cuda", "ci-check"]

[dependencies]
cudarc = {version = "0.9.15", default-features = false, optional = true, features = ["driver", "cublas", "nvrtc"]}
futures-lite = {version = "2.0.1", optional = true}
gemm = {version = "0.16.15", default-features = false, optional = true, features = ["rayon"]}
half = {version = "2.3.1", optional = true, features = ["num-traits", "rand_distr"]}
libm = {workspace = true}
memmap2 = {workspace = true, optional = true}
naga = {version = "0.14.1", optional = true}
no-std-compat = {version = "0.4.1", default-features = false, features = ["alloc", "compat_hash"], optional = true}
num-traits = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
rayon = {version = "1.7.0", optional = true}
safetensors = {workspace = true, optional = true}
spin = {version = "0.9.8", default-features = false, features = ["spin_mutex", "rwlock", "portable_atomic"], optional = true}
thingbuf = {version = "0.1.4", optional = true}
wgpu = {version = "0.17.2", features = ["glsl", "spirv"], optional = true}
zip = {version = "0.6.6", default-features = false, optional = true}

[dev-dependencies]
indicatif = "0.17.3"
mnist = "0.5.0"
tempfile = "3.3.0"

[build-dependencies]
glob = {version = "0.3.1", optional = true}

[features]
default = ["std", "fast-alloc", "cpu"]
nightly = ["half?/use-intrinsics", "gemm?/nightly"]

no-std = ["no-std-compat", "dep:spin", "cudarc?/no-std", "num-traits/libm"]
std = ["cudarc?/std", "rand_distr/std_math", "gemm?/std"]

cpu = ["dep:gemm", "dep:rayon"]
fast-alloc = ["std"]

cuda = ["dep:cudarc", "dep:glob"]
cudnn = ["cuda", "cudarc?/cudnn"]
webgpu = [
  "dep:wgpu",
  "dep:futures-lite",
  "dep:thingbuf",
  "dep:naga",
  "dep:glob",
  "wgpu/expose-ids",
]

f16 = ["dep:half", "cudarc?/f16", "gemm?/f16"]

numpy = ["dep:zip", "std"]
safetensors = ["dep:safetensors", "std", "dep:memmap2"]

ci-check = ["cudarc?/ci-check"]
test-amp-f16 = ["f16"]
test-f16 = ["f16"]
test-f64 = []
test-integrations = []
